feat: implementacion completa de stock por variantes de medida y optimizacion responsiva