@@ -2,10 +2,13 @@ package com.fabrica.ecommerce.service;
 
 import com.fabrica.ecommerce.dto.product.ProductRequestDTO;
 import com.fabrica.ecommerce.dto.product.ProductResponseDTO;
+import com.fabrica.ecommerce.dto.product.SizeStockDTO;
 import com.fabrica.ecommerce.model.Category;
+import com.fabrica.ecommerce.model.InventoryBatch;
 import com.fabrica.ecommerce.model.Product;
 import com.fabrica.ecommerce.model.ProductImage;
 import com.fabrica.ecommerce.repository.CategoryRepository;
+import com.fabrica.ecommerce.repository.InventoryBatchRepository;
 import com.fabrica.ecommerce.repository.ProductRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
@@ -14,7 +17,6 @@ import org.springframework.web.multipart.MultipartFile;
 
 import java.math.BigDecimal;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -23,26 +25,30 @@ public class ProductService {
     private final ProductRepository productRepository;
     private final CategoryRepository categoryRepository;
     private final FileStorageService fileStorageService;
+    private final InventoryBatchRepository inventoryBatchRepository;
 
     @Transactional(readOnly = true)
     public List<ProductResponseDTO> getActiveCatalog() {
-        List<Object[]> results = productRepository.getActiveProductsWithStock();
-        return results.stream().map(row -> {
-            Product p = (Product) row[0];
-            Long stock = ((Number) row[1]).longValue();
-            List<String> imageUrls = p.getImages().stream()
-                .map(com.fabrica.ecommerce.model.ProductImage::getImageUrl)
-                .collect(Collectors.toList());
+        List<Product> activeProducts = productRepository.findAll().stream().filter(Product::getIsActive).toList();
+
+        return activeProducts.stream().map(p -> {
+            List<String> imageUrls = p.getImages().stream().map(ProductImage::getImageUrl).toList();
+            
+            List<SizeStockDTO> sizeStockList = p.getSizes().stream().map(sizeName -> {
+                long stock = inventoryBatchRepository.findAvailableBatchesForProductAndSize(p.getId(), sizeName)
+                        .stream().mapToLong(InventoryBatch::getQuantityRemaining).sum();
+                return new SizeStockDTO(sizeName, stock);
+            }).toList();
                 
             return new ProductResponseDTO(
                 p.getId(), p.getSku(), p.getName(), p.getDescription(), 
-                p.getSalePrice(), p.getCategory().getName(), stock, imageUrls
+                p.getSalePrice(), p.getCategory().getName(), imageUrls, sizeStockList
             );
-        }).collect(Collectors.toList());
+        }).toList();
     }
 
     @Transactional
-    public Product createProduct(Long categoryId, String sku, String name, String description, BigDecimal salePrice, MultipartFile[] images) {
+    public Product createProduct(Long categoryId, String sku, String name, String description, BigDecimal salePrice, List<String> sizes, MultipartFile[] images) {
         Category category = categoryRepository.findById(categoryId)
                 .orElseThrow(() -> new IllegalArgumentException("Categoría no encontrada"));
 
@@ -53,6 +59,10 @@ public class ProductService {
         product.setDescription(description);
         product.setSalePrice(salePrice);
         
+        if (sizes != null && !sizes.isEmpty()) {
+            product.setSizes(sizes);
+        }
+        
         if (images != null) {
             for (int i = 0; i < images.length; i++) {
                 MultipartFile file = images[i];
@@ -61,7 +71,7 @@ public class ProductService {
                     ProductImage pi = new ProductImage();
                     pi.setImageUrl(url);
                     pi.setProduct(product);
-                    pi.setIsPrimary(i == 0); // La primera imagen se marca como principal
+                    pi.setIsPrimary(i == 0);
                     product.getImages().add(pi);
                 }
             }
@@ -74,8 +84,13 @@ public class ProductService {
         Product product = productRepository.findById(id)
                 .orElseThrow(() -> new IllegalArgumentException("Producto no encontrado"));
         product.setName(request.name());
-        product.setDescription(request.description()); // Mapeo de la nueva columna
+        product.setDescription(request.description());
         product.setSalePrice(request.salePrice());
+        
+        if (request.sizes() != null) {
+            product.setSizes(request.sizes());
+        }
+        
         return productRepository.save(product);
     }
 
@@ -83,7 +98,6 @@ public class ProductService {
     public void deactivateProduct(Long id) {
         Product product = productRepository.findById(id)
                 .orElseThrow(() -> new IllegalArgumentException("Producto no encontrado"));
-        // Baja lógica: no lo borramos de la BD, solo lo ocultamos
         product.setIsActive(false);
         productRepository.save(product);
     }
